# AIMarketDataAnalysis

./: .gitignore  CLAUDE.md  PAPER.md  README.md  TEST_RESULTS.md  pyproject.toml  智能数据分析Agent_项目细节与面试预判.md
config/: default.yaml
data/eval/: business_scenarios.jsonl  spider_mini.jsonl
data/eval/reports/: experiments_20260622_230213.json  (+1 more)
prompts/: chart_select.j2  critic.j2  narrative.j2  planner.j2  sql_gen.j2  sql_regenerate.j2
src/: __init__.py
src/agent/: __init__.py  graph.py  orchestrator.py  planner.py  state.py
src/cli/: __init__.py  analyze.py  build_index.py  evaluate.py
src/core/: __init__.py  config.py  llm_client.py  logging.py  schemas.py
src/correction/: __init__.py  classifier.py  critic.py  loop.py
src/data/: __init__.py  db_loader.py  faker_augment.py  noise_injector.py  olist_loader.py  pipeline.py  schema_ddl.py  schema_metadata.json
src/evaluation/: __init__.py  eval_set.py  eval_set_generator.py  experiments.py  llm_judge.py  metrics.py  runner.py
src/executor/: __init__.py  ast_checker.py  sandbox.py  security.py  sqlite_sandbox.py
src/narrative/: __init__.py  generator.py  grounding.py
src/schema_rag/: __init__.py  bm25_retriever.py  chroma_store.py  chunker.py  embedder.py  fusion.py  retriever.py
src/sql_gen/: __init__.py  few_shot_retriever.py  few_shot_store.py  generator.py  prompt_templates.py
src/visualization/: __init__.py  chart_selector.py  font_config.py  renderer.py
tests/: __init__.py  conftest.py  test_ast_checker.py  test_chart_selector.py  test_correction_classifier.py  test_metrics.py
