[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "data-analysis-agent"
version = "0.1.0"
description = "智能数据分析 Agent — NL2SQL + Self-Correction + Visualization"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9.0",
    "sqlglot>=23.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "pandas>=2.0.0",
    "jinja2>=3.1.0",
    "tenacity>=8.2.0",
    "rich>=13.0.0",
    "langgraph>=0.0.40",
    "httpx>=0.25.0",
    "tqdm>=4.65.0",
    "Faker>=22.0.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
data-agent = "src.cli.analyze:main"
data-agent-build-index = "src.cli.build_index:main"
data-agent-evaluate = "src.cli.evaluate:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
